--- a/botframework-webchat-control/package.json
+++ b/botframework-webchat-control/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@microsoft/omnichannel-chat-sdk": "^1.0.0",
+    "@microsoft/omnichannel-chat-sdk": "^1.0.1-main.2d305f2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
