--- a/bf-webchat-control/package.json
+++ b/bf-webchat-control/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/omnichannel-chat-sdk": "^1.6.3-main.6646484",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
